--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,8 @@
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
+
+
 /* ######################################### */
 /* Menü */
 /* ######################################### */
@@ -22,6 +27,8 @@
 
 .main-nav-bar {
     height: 70vh;
+    font-family: 'Montserrat', sans-serif;
+    
 }
 
 /*list of nav items*/
