--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,81 +3,14 @@
 
 
 
-/* ######################################### */
-/* Menü */
-/* ######################################### */
+/*Logo Area*/
+
+.first-row-header {
+    background-color: white;
+    padding: 20px 0px;
+}
+
 /*NAV*/
-@media all and (min-width: 992px) {
-    .navbar .nav-item .dropdown-menu {
-        display: none;
-    }
-
-    .navbar .nav-item:hover .nav-link {
-        color: #fff;
-    }
-
-    .navbar .nav-item:hover .dropdown-menu {
-        display: block;
-    }
-
-    .navbar .nav-item .dropdown-menu {
-        margin-top: 0;
-    }
-}
-
-.main-nav-bar {
-    height: 70vh;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 0.9em;
-    
-}
-
-/*list of nav items*/
-.nav-alle-teppisch-kategorien li {
-    list-style: none;
-    color: red;
-    
-}
-
-.nav-alle-teppisch-kategorien li:hover {
-    text-decoration: none;
-    color: #000;
-    
-}
-
-
-/* Farben */
-.Farbkreis {
-    width: 35px;
-    height: 35px;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-
-    /*    border-radius: 50%;*/
-    transition: all 0.3s ease;
-}
-
-.Farbkreis:hover {
-    transform: scale(1.1);
-    opacity: 0.7;
-}
-
-@media only screen and (max-width: 1520px) {
-    .Farbkreis {
-        width: 25px;
-        height: 25px;
-        margin: 0px 0px;
-    }
-
-}
-
-
-
-.Farbpalette a {
-    margin: 0px 3%;
-}
-
 
 /* adds some margin below the link sets  */
 .navbar .dropdown-menu div[class*="col"] {
@@ -143,232 +76,71 @@
 }
 
 
-/*Logo Bereich*/
-
-.LogoMT {
-    background-color: white;
-    padding: 20px 0px;
-}
-
-
-/* nav end */
-
-
-
-.nav-menu {
-    height: 60px;
-    position: fixed;
-    z-index: 999;
-
-}
-
-
-.NavBoxLeiste {
-    width: 100vw;
-    background-color: #fff;
-    border-top: 1px solid #F7F7F9;
-    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.00);
-    padding: 0;
-}
-
-
-@media only screen and (max-width: 991px) {
-    .nav-menu {
+@media all and (min-width: 992px) {
+    .navbar .nav-item .dropdown-menu {
         display: none;
     }
 
-    .LogoMT {
-        display: none;
+    .navbar .nav-item:hover .nav-link {
+        color: #fff;
     }
 
+    .navbar .nav-item:hover .dropdown-menu {
+        display: block;
+    }
+
+    .navbar .nav-item .dropdown-menu {
+        margin-top: 0;
+    }
+}
+
+.main-nav-bar {
+    height: 70vh;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.9em;
+
 
 }
 
-a {
+
+
+
+
+
+/* Farben */
+
+.Farbkreis {
+    width: 35px;
+    height: 35px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    /*    border-radius: 50%;*/
     transition: all 0.3s ease;
-    color: #4D4F4D;
 }
 
-.MenuElement {
-    height: 60px;
-    z-index: 999;
-}
-
-.MenuElement:hover .NavTitle {
-    border-bottom: 0px solid #9D212D;
-    color: #9D212D;
-
-
-}
-
-.MenuElement:hover .Content-Nav-Element {
-    opacity: 1;
-    z-index: 999;
-    pointer-events: all;
-}
-
-.MenuElement:hover .ContentApear {
-    opacity: 1;
-    transform: scale(1);
-}
-
-
-.NavTitle {
-    font-family: 'Roboto';
-    color: #4D4F4D;
-    transition: all 0.3s ease;
-    padding: 0px 0px 0px 0px;
-    font-weight: 400;
-    z-index: 999;
-    /*    background-color: #fff;*/
-    margin: 0px 30px 0px 0px;
-    height: 100%;
-    line-height: 60px;
-    font-size: 12pt;
-    white-space: nowrap;
-}
-
-.NavTitle:hover {
-    cursor: pointer;
-}
-
-.Content-Nav-Element {
-    background-color: #fff;
-    width: 99%;
-    height: 500px;
-    position: absolute;
-    left: 0;
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.03);
-    z-index: 0;
-
-    top: 60px;
-    opacity: 0;
-    pointer-events: none;
-    border-top: 1px solid #F7F7F9;
-    max-width: 1340px;
-
-    /*    opacity: 1;*/
-
-}
-
-.ContentApear {
-    opacity: 0;
-    transform: scale(0.98);
-
-
-    /*
-    opacity: 1;
-    transform: scale(1);
-*/
-
-    transition: opacity 1s ease, transform 0.5s ease;
-
-}
-
-
-.NavContentInfoLeiste {
-    background-color: #fff;
-    width: 60vw;
-    height: 100px;
-    bottom: 0;
-    left: 0;
-    position: absolute;
-}
-
-.LeftNavContent {
-    width: 60%;
-    height: 500px;
-    background-color: white;
-    /*    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.19);*/
-}
-
-.Link-Section-nav {
-    /*    width: 30%;*/
-    top: 0;
-}
-
-
-.StartNavAbstand {
-    margin-left: 10%;
+.Farbkreis:hover {
+    transform: scale(1.1);
+    opacity: 0.7;
 }
 
 @media only screen and (max-width: 1520px) {
-    .StartNavAbstand {
-        margin-left: 5%;
+    .Farbkreis {
+        width: 25px;
+        height: 25px;
+        margin: 0px 0px;
     }
-}
-
-
-
-.Link-Section-nav h2,
-.RightNavContent h2,
-.Farbpalette h2,
-.TeppichZubehoer h2 {
-    font-family: 'Roboto';
-    color: #4D4F4D;
-    font-size: 12pt;
-    top: 0;
-    height: 20px;
-    text-align: left;
-    text-transform: none;
-    font-weight: 500;
-    margin: 15px 0px;
-    text-decoration: underline;
-    font-style: bold;
 
 }
 
 
 
-
-.UnterNavElemente {
-    color: #434343;
-    font-family: 'Roboto';
-    font-size: 12pt;
-    line-height: 160%;
-    white-space: nowrap;
-    font-weight: 600;
-    display: block;
-    text-align: left;
-    text-transform: none;
-
+.Farbpalette a {
+    margin: 0px 3%;
 }
 
-.UnterNavElemente > div {
-
-    transition: all 0.3s ease;
-
-}
-
-.UnterNavElemente:Hover > div {
-    margin-left: 5px;
-
-}
-
-.NotFettNAV {
-    font-weight: 400;
-}
-
-@media only screen and (max-width: 1520px) {
-    .UnterNavElemente {
-        font-size: 10pt;
-    }
-}
-
-
-
-
-
-
-.RightNavContent {
-    /*        width: 40%;*/
-    height: 500px;
-    background-color: hsl(0, 0%, 98%);
-    /*    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.19);*/
-
-}
-
-
+/* img box */
 .imgBoxNav {
     width: 250px;
     height: 30px;
@@ -431,117 +203,6 @@ a {
     text-align: center;
 }
 
-.BildNavWrap {
-
-    margin: 10px 10px;
-}
-
-
-.KissenLayout {}
-
-.KissenBilderNav {
-    width: 100%;
-    height: 200px;
-}
-
-.KissenBilderNav img {
-    width: 250px;
-}
-
-@media only screen and (max-width: 1720px) {
-    .KissenBilderNav img {
-        width: 200px;
-    }
-}
-
-@media only screen and (max-width: 1260px) {
-    .KissenBilderNav img {
-        width: 200px;
-    }
-}
-
-
-.RightNavContent .imgBoxNav:hover {
-    border-radius: 20px;
-}
-
-.NavSectionAbstand {
-    margin: 0px 20px;
-}
-
-
-.TeppichUnterlagenLink {
-    display: block;
-    width: 100px;
-}
-
-.TrennstrichNav-H {
-    height: 1px;
-    background-color: #c4c4c4;
-    margin: 25px 20px;
-}
-
-.BigBilderNAV {
-    height: 500px;
-    width: 90%;
-    background-color: #fff;
-}
-
-@media only screen and (max-width: 1600px) {
-    .BigBilderNAV {
-        width: 80%;
-    }
-}
-
-.L-Kathegorie-Klein-NAV {
-    width: 10%;
-    height: 500px;
-    background-color: #fff;
-}
-
-@media only screen and (max-width: 1600px) {
-    .L-Kathegorie-Klein-NAV {
-        width: 20%;
-        height: 500px;
-        background-color: #fff;
-    }
-}
-
-.Buttons_Startseite_V4 {
-    background-color: #fff;
-    color: #9d212d;
-    text-align: center;
-    padding: 10px;
-    font-family: 'Bellota Text', bold;
-    font-weight: bold;
-    font-size: 16pt;
-    transition: all 0.5s ease;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.14);
-    min-width: 200px;
-    max-width: 600px;
-
-}
-
-.Buttons_Startseite_V4:hover {
-    border-radius: 50px;
-    background-color: #9d212d;
-    color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.14);
-}
-
-@media only screen and (max-width: 1600px) {
-    .Buttons_Startseite_V4 {
-        min-width: 100px;
-        max-width: 400px;
-    }
-}
-
-
-.OrientBilderNAV {
-    width: 150px;
-    height: 150px;
-    margin: 10px;
-}
 
 .ModernBilderNAV {
     width: 280px;
@@ -593,3 +254,16 @@ a {
         display: none;
     }
 }
+
+
+/* Decoration container*/
+.dekoration-list li {
+    list-style: none;
+}
+
+.decoration-images:hover {
+    transform: scale(1.09);
+    opacity: 0.8;
+}
+
+/* -----------------------------------------------End ---------------------------------*/
