--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,8 +105,6 @@
 
 
 
-
-
 /* Farben */
 
 .Farbkreis {
@@ -140,22 +138,11 @@
     margin: 0px 3%;
 }
 
-/* img box */
-.imgBoxNav {
-    width: 250px;
-    height: 30px;
-    align-content: center;
-    align-items: center;
-    overflow: hidden;
-    border-radius: 0px;
-    background-color: white;
-    transition: all 0.3s ease;
-}
-
-
 
 
 .imgBoxNav img {
+    max-width: 100%;
+    height: auto;
     transition: all 0.3s ease;
 }
 
@@ -169,39 +156,7 @@
     opacity: 0.6;
 }
 
-.imgBoxNav2 {
-    align-content: center;
-    align-items: center;
-    overflow: hidden;
-    border-radius: 0px;
-    background-color: white;
-    transition: all 0.3s ease;
-}
 
-.imgBoxNav2 img {
-    transition: all 0.3s ease;
-    width: 400px;
-}
-
-.imgBoxNav2:hover > img {
-    transform: scale(1.05);
-    opacity: 0.6;
-}
-
-.imgBoxNav2:hover > a > img {
-    transform: scale(1.05);
-    opacity: 0.6;
-}
-
-
-.BildTitleNav {
-    color: #4D4F4D;
-    font-family: 'Roboto';
-    font-size: 14pt;
-    line-height: 160%;
-    white-space: nowrap;
-    text-align: center;
-}
 
 
 .ModernBilderNAV {
